Update APIServlet.java